# ros_test_intra_process_service_communication

./: CMakeLists.txt  LICENSE  README.md  intra-process_service_communication.patch  package.xml
src/: call_from_outside.cpp  main.cpp  main.cpp~  multiple_threads.cpp  single_thread.cpp
