<?xml version="1.0"?>
<package>
  <name>test_intra_process_service_communication</name>
  <version>0.0.0</version>
  <description>Test ROS services' ability to have intra-process communcation</description>

  <maintainer email="ya-ikmik2012@yandex.ru">Vasily Alferov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
